# gdrive-mcp

./: .env.example  .gitignore  Dockerfile  README.md  allowlist-readme.md  allowlist.json  pyproject.toml  railway.toml  server.py
audit/: __init__.py  logger.py
auth/: __init__.py  client.py  service_account.py
drive/: __init__.py  batch.py  tools.py  trash.py  validate.py
